moving sections around

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -22,21 +22,19 @@ The infrastructure migration has the following key steps:
 
 . xref:Planning_the_migration[Planning the migration]
 +
-* Assessing your source and target environments to ensure sufficient resources
-* Formulating strategies by following recommendations to minimize the impact on your users
+* xref:Questions_to_ask_before_migration[Questions designed to assess the resources and time required for your migration]
+* xref:Recommendations_for_migration[Recommendations to minimize the impact on your users]
 
 . xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
 +
-* Preparing the source network and checking the virtual machines for anything that might hinder the migration process
-* Configuring the target storage and networks, installing software, and adding the providers to CloudForms
-* Configuring the conversion hosts (conversion hosts are RHV hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`) in CloudForms
+* xref:Preparing_the_vmware_source_environment[Preparing the source network and checking the virtual machines for anything that could hinder the migration process]
+* xref:Preparing_the_target_environment[Configuring the target storage and networks, installing software, and adding the providers to CloudForms]
+* xref:Configuring_the_conversion_hosts[Configuring the conversion hosts in CloudForms]. Conversion hosts are RHV hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`, which perform the migration.
 
 . xref:Migrating_the_infrastructure[Migrating the infrastructure in CloudForms]
 +
-* Mapping the source and target infrastructures
-* Creating and running a migration plan
-+
-See xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[] for migration process details.
+* xref:Creating_an_infrastructure_mapping[Mapping the source and target infrastructures]
+* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]. For a detailed description of the migration process, see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[].
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
