--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
@@ -5,23 +5,12 @@
 
 You can select, authenticate, and configure your conversion hosts in CloudForms.
 
-These procedures assume that you have determined the following:
+These procedures assume that you have answered these questions:
 
-* xref:Deciding_how_many_conversion_hosts_to_create[How many conversion hosts you require]
-* xref:Choosing_vddk_or_ssh_transformation[Whether to use VDDK or SSH]. For VDDK, the xref:VDDK_only_Downloading_and_copying_VDDK[Prerequisite for VDDK transformation]] applies.
+* xref:Deciding_how_many_conversion_hosts_to_create[]
+* xref:Choosing_vddk_or_ssh_transformation[] For VDDK, the xref:VDDK_only_Downloading_and_copying_VDDK[VDDK prerequisite]] applies.
 
-To upgrade the conversion hosts:
-
-* Red Hat Virtualization:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-# yum update
-----
-
-* OpenStack Platform: xref:Deploying_osp_conversion_hosts[Download the latest conversion host appliance and re-deploy the conversion hosts]
-
-.Prerequisite for VDDK transformation
+.VDDK prerequisite
 [id='VDDK_only_Downloading_and_copying_VDDK']
 
 * Download the VMware Virtual Disk Development Kit:
@@ -77,3 +66,16 @@ PLACEHOLDER: CONVERSION HOST UI SCREENSHOT
 The configured conversion hosts and status information, including error messages, appear in the *Configured Conversion Hosts* list.
 
 You can click *Remove* to unconfigure a conversion host or *Retry* to retry a conversion host configuration.
+
+== Upgrading the conversion hosts
+
+* Red Hat Virtualization:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# yum update
+----
+
+* OpenStack Platform: xref:Deploying_osp_conversion_hosts[Download the latest conversion host appliance and re-deploy the conversion hosts]
+
+include::proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
