--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -1,26 +1,18 @@
 // Module included in the following assemblies:
-// assembly_Migrating_the_infrastructure.adoc
-[id="Creating_and_running_a_migration_plan"]
-= Creating and running a migration plan
+// assembly_Creating_and_running_a_migration_plan.adoc
+[id="Creating_a_migration_plan"]
+= Creating a migration plan
 
-You create and run a migration plan with the *Create Migration Plan* wizard.
-
-In the *Schedule* screen of the wizard, you can select one of the following options:
-
-* *Save migration plan to run later*
-* *Start migration immediately*
-
-To cancel a migration plan in progress, see xref:Canceling_a_migration_plan[].
-
-If a migration fails because of external factors, such as network disruption, see xref:Retrying_a_failed_migration_plan[].
-
-== Creating a migration plan[[Creating_a_migration_plan]]
+[NOTE]
+.Large migrations
+====
+A CSV file is optional, but recommended, for large migrations. Adding virtual machines with a CSV file is faster than manually selecting virtual machines for migration or selecting an OpenStack Platform security group and flavor for each virtual machine. See xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[].
+====
 
 . Click menu:Compute[Migration > Migration Plans].
 . Click *Create Migration Plan*.
 . Perform the following procedures in the *Create Migration Plan* wizard:
 
-.Create Migration Plan wizard
 image:Create_Migration_Plan_screen.png[]
 
 [cols="1,3", options="header"]
@@ -34,7 +26,7 @@ image:Create_Migration_Plan_screen.png[]
 ====
 If you select an OpenStack Platform mapping, an *Instance Properties* screen appears after the *VMs* screen.
 ====
-. Enter the migration plan name and (optional) description.
+. Enter the migration plan *Name* and (optional) *Description*.
 . Select a virtual machine discovery method:
 
 * *Choose from a list of VMs discovered in the selected infrastructure mapping*
@@ -84,7 +76,7 @@ The migration plan is saved in *Migration Plans Not Started* and will not run un
 
 * *Start migration immediately*
 +
-The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time. See xref:Viewing_migration_plan_progress[] for details.
+The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time. See xref:Viewing_migration_plan_progress[] for details. Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
 
 . Click *Create*.
 
