--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -61,4 +61,4 @@ You can click an infrastructure mapping element to view its details:
 .Infrastructure Mappings list
 image:Infra_mappings_list.png[]
 
-After you have created an infrastructure mapping, check xref:Migration_plan_options[] to see whether they apply to your migration.
+After you have created an infrastructure mapping, you can xref:Creating_and_running_a_migration_plan[create and run a migration plan].
