--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -69,6 +69,6 @@ Always download the latest version of the OpenStack Platform conversion applianc
 For optimal performance:
 
 * Deploy the conversion hosts on more than one hypervisor.
-* Deploy the conversion hosts on a compute node with nested virtualization enabled (see link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]). Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
+* Deploy the conversion hosts on a compute node with nested virtualization enabled. See link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]. Nested virtualization is a technology preview.
 
 You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts] in CloudForms.
