--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -4,7 +4,7 @@
 
 . Check that your software versions are compatible:
 +
-.Software compatability matrix
+.Software compatibility matrix
 [cols="2,1,1,1", options="header"]
 |===
 |Software |link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.0/html/infrastructure_migration_solution_guide/[IMS 1.0] |link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.1/html/infrastructure_migration_solution_guide/[IMS 1.1] |IMS 1.2
