--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
@@ -4,6 +4,7 @@
 Preparing the environment for migration involves the following key steps:
 
 . xref:Preparing_the_vmware_source_environment[]
+
 . Configuring the target storage and networks, installing software, and adding providers to CloudForms in the target environment:
 
 ** xref:Preparing_the_rhv_target_environment[]
@@ -14,7 +15,10 @@ Preparing the environment for migration involves the following key steps:
 You can xref:Changing_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process.
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
-include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
-include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
+
+[id="Preparing_the_target_environment"]
+== Preparing the target environment
+include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+2]
+include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+2]
+
 include::modules/proc_Configuring_the_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
