--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
@@ -1,21 +1,17 @@
 // Module included in the following assemblies:
 // assembly_Migrating_the_infrastructure.adoc
 [id="Migration_plan_options"]
-= Migration plan options
+= Migration plan prerequisites and options[[Migration_plan_prerequisites_and_options]]
 
-Check the following options to see whether they apply to your migration:
+The following prerequisites and options may apply to your migration:
 
-* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], if the source virtual machines have been migrated in the past.
-+
-Previously migrated virtual machines cannot be discovered by the migration plan because they are marked as `migrated` in the CloudForms database.
-+
-A CSV file is optional, but recommended, for large migrations. Adding virtual machines with a CSV file is faster than manually selecting virtual machines for migration or selecting an OpenStack Platform security group and flavor for each virtual machine.
+* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[], if the source virtual machines have been migrated in the past. Previously migrated virtual machines cannot be discovered by the migration plan because they are marked as `migrated` in the CloudForms database.
 
 * xref:Creating_a_rhel_premigration_playbook[], to ensure that their IP addresses are accessible after migration
 
-* xref:Adding_ansible_playbooks_to_cloudforms[], if you are using Ansible playbooks, including the `RHEL premigration` playbook
+* xref:Adding_ansible_playbooks_to_cloudforms[], if you are using Ansible playbooks, including the `RHEL premigration` playbook, for premigration/postmigration tasks
 
-If you are not using these options, go to xref:Creating_and_running_a_migration_plan[].
+If these prerequisites and options do not apply, you can xref:Creating_a_migration_plan[create a migration plan].
 
 include::proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc[leveloffset=+1]
 include::proc_Creating_a_rhel_premigration_playbook.adoc[leveloffset=+1]
