--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
@@ -3,9 +3,9 @@
 [id="Creating_a_rhel_premigration_playbook"]
 = Creating a `RHEL premigration` playbook for RHEL/Linux source virtual machines
 
-If you are migrating virtual machines running RHEL or other Linux-based operating system, you should create and run a `RHEL premigration` playbook to ensure that their IP addresses are accessible after migration.
+If you are migrating virtual machines running RHEL or other Linux operating system, a `RHEL premigration` playbook ensures that their IP addresses are accessible after migration. The `RHEL premigration` playbook calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation).
 
-The `RHEL premigration` playbook calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation). The `ims.rhel_premigration` role performs the following tasks on the source virtual machines:
+The `ims.rhel_premigration` role performs the following tasks on the source virtual machines:
 
 * Preserves the static IP address configuration by creating udev rules to associate the virtual machine's MAC address with its interface name
 
