--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -3,7 +3,7 @@
 [id="Questions_to_ask_before_migration"]
 = Questions to ask before migration
 
-The following questions can help you to estimate the resources required for migration:
+The following questions can help you to estimate the resources and time required for migration:
 
 What am I migrating?::
 * Identify the hosts and virtual machines to be migrated.
@@ -28,18 +28,22 @@ What am I missing?::
 * Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
 
 What impact will the migration have on my users?::
-* Assess the effect the migration may have on a production environment.
-* It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
+* Assess the effects the migration may have on a production environment.
++
+[NOTE]
+====
+It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
+====
 * Check whether users will lose access to critical applications.
 
 How long will the migration take?::
 * There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following example is provided as a guide.
 +
 [id="Migration_example"]
-.Red Hat Virtualization migration example
+.Red Hat Virtualization migration
 +
 ====
-* Duration of migration: 1:15:53 (HH:MM:SS)
+* Duration of migration: 1:15:53 (_hh:mm:ss_)
 * 10 virtual machines (100 GB RAM, 1000 GB storage)
 * Total data migrated, using VDDK: 1000 GB
 * Hardware:
