--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -1,7 +1,7 @@
 // Module included in the following assemblies:
 // assembly_Planning_the_migration.adoc
 [id="Recommendations_for_migration"]
-= Recommendations for planning a migration
+= Recommendations for migration
 
 The following recommendations will minimize the impact of the migration on your environment.
 
@@ -40,17 +40,18 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 
 .Deploying conversion hosts
 
-* Create an appropriate number of conversion hosts. See xref:Deciding_how_many_conversion_hosts_to_create[].
-* Choose the best datapath transformation option for your environment. See xref:Choosing_vddk_or_ssh_transformation[].
+* Create an appropriate number of conversion hosts. See xref:Deciding_how_many_conversion_hosts_to_create[]
+* Choose the best datapath transformation option for your environment. See xref:Choosing_vddk_or_ssh_transformation[]
 * Deploy OpenStack Platform conversion hosts on multiple hypervisors.
+* Deploy OpenStack Platform conversion hosts on a compute node with nested virtualization enabled (see link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]). Nested virtualization is a technology preview.
 
 .Controlling the migration process
 
-* Create multiple xref:Creating_and_running_a_migration_plan[migration plans] for finer control over the migration process.
+* Create multiple xref:Creating_and_running_a_migration_plan[migration plans] for finer control.
 * Perform test migrations with different xref:Changing_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations] to assess the capabilities of your environment's infrastructure.
 
 [id="Deciding_how_many_conversion_hosts_to_create"]
-== Deciding how many conversion hosts to create
+== How many conversion hosts do I need?
 
 The number of conversion hosts you create depends on the size of your migration. All the virtual machines in the migration plan are migrated at the same time, in parallel. The number of virtual machines that you can migrate simultaneously depends on your infrastructure capabilities. Each migration requires a certain amount of network bandwidth, I/O throughput, and processing power for the conversion process.
 
@@ -61,9 +62,9 @@ Conversion hosts and providers are limited to ten concurrent migrations, unless 
 Test your environment thoroughly before the migration to determine how many migrations it can support without negative effects, for example, five conversion hosts, each running ten concurrent migrations.
 
 [id="Choosing_vddk_or_ssh_transformation"]
-== Choosing a datapath transformation option: VDDK or SSH
+== Which datapath transformation option, VDDK or SSH?
 
-You configure your conversion hosts to use either the VMware Virtual Disk Development kit (VDDK) or SSH as the datapath transformation option for converting the virtual machines. This decision is determined by the number of virtual machines you intend to migrate and the capabilities of your infrastructure. The following table compares the options.
+You configure your conversion hosts to use either the VMware Virtual Disk Development kit (VDDK) or SSH as the datapath for converting the virtual machines. The choice is determined by the number of virtual machines you are migrating and the capabilities of your infrastructure. The following table compares the options.
 
 [cols="1,2,2", options="header"]
 .VDDK and SSH comparison
