trying different format

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
@@ -22,3 +22,4 @@ include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+2]
 include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+2]
 
 include::modules/proc_Configuring_the_conversion_hosts.adoc[leveloffset=+1]
+include::modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
