--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
@@ -5,21 +5,21 @@
 
 You can select, authenticate, and configure your conversion hosts in CloudForms.
 
-These procedures assume that you have answered these questions:
+.Prerequisites
 
-* xref:Deciding_how_many_conversion_hosts_to_create[]
-* xref:Choosing_vddk_or_ssh_transformation[] For VDDK, the xref:VDDK_only_Downloading_and_copying_VDDK[VDDK prerequisite]] applies.
+* These procedures assume that you have decided the following:
 
-.VDDK prerequisite
-[id='VDDK_only_Downloading_and_copying_VDDK']
+** xref:Deciding_how_many_conversion_hosts_to_create[]
+** xref:Choosing_vddk_or_ssh_transformation[]
 
-* Download the VMware Virtual Disk Development Kit:
-+
+* VDDK requires the latest Virtual Disk Development Kit release:
+
 . Navigate to link:https://www.vmware.com/support/pubs/[].
-. Click `VMware SDK & API Product Documentation` to expand
-. Click `VMware Virtual Disk Development Kit (VDDK)`.
-. Click `Latest Releases` and select the latest VDDK release.
+. Click *VMware SDK & API Product Documentation* to expand.
+. Click *VMware Virtual Disk Development Kit (VDDK)*.
+. Click *Latest Releases* and select the latest VDDK release.
 . Download the VDDK package (+VMware-vix-disklib-_version_.x86_64.tar.gz+) and record its path for the conversion host configuration procedure.
+
 
 .Procedure
 
@@ -36,7 +36,7 @@ PLACEHOLDER: CONVERSION HOST UI SCREENSHOT
 .<a|. Select a *Provider Type*.
 . Select a *Provider*.
 
-. Select a Red Hat Virtualization cluster / OpenStack Platform project.
+. Select a Red Hat Virtualization *Cluster* / OpenStack Platform *Project*.
 
 . Click *Next*.
 |*Hosts*
@@ -67,7 +67,7 @@ The configured conversion hosts and status information, including error messages
 
 You can click *Remove* to unconfigure a conversion host or *Retry* to retry a conversion host configuration.
 
-== Upgrading the conversion hosts
+.Upgrading the conversion hosts
 
 * Red Hat Virtualization:
 +
@@ -78,4 +78,4 @@ You can click *Remove* to unconfigure a conversion host or *Retry* to retry a co
 
 * OpenStack Platform: xref:Deploying_osp_conversion_hosts[Download the latest conversion host appliance and re-deploy the conversion hosts]
 
-include::proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
+// include::proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
