--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -62,9 +62,9 @@ Conversion hosts and providers are limited to ten concurrent migrations, unless 
 Test your environment thoroughly before the migration to determine how many migrations it can support without negative effects, for example, five conversion hosts, each running ten concurrent migrations.
 
 [id="Choosing_vddk_or_ssh_transformation"]
-== Which datapath transformation option, VDDK or SSH?
+== Which transformation method, VDDK or SSH?
 
-You configure your conversion hosts to use either the VMware Virtual Disk Development kit (VDDK) or SSH as the datapath for converting the virtual machines. The choice is determined by the number of virtual machines you are migrating and the capabilities of your infrastructure. The following table compares the options.
+You will configure the conversion hosts to use either the VMware Virtual Disk Development kit (VDDK) or SSH as the transformation method for converting the virtual machines. The choice is determined by the number of virtual machines you are migrating and the capabilities of your infrastructure. The following table compares the options.
 
 [cols="1,2,2", options="header"]
 .VDDK and SSH comparison
