SSH configuration for conversion hosts - fixes

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -190,16 +190,27 @@ Run the `conversion_host_check` playbook to verify that the conversion hosts are
 +
 For instructions, go to the link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation site]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
 
-. Copy the public key you created in xref:VDDK_and_SSH_Configuring_the_conversion_hosts[] to each VMware hypervisor to ensure that the Manager or the OpenStack Platform conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
+. Copy the public key you created in `extra_vars.yml` (see xref:VDDK_and_SSH_Configuring_the_conversion_hosts[]) to each VMware hypervisor to ensure that the Manager or the OpenStack Platform conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
+
+* Red Hat Virtualization:
 +
 [options="nowrap" subs="verbatim"]
 ----
 # ssh root@_esx1.example.com_ sh -c \
     'cat >> /etc/ssh/keys-root/authorized_keys' < /var/lib/vdsm/.ssh/id_rsa.pub
-#   'cat >> /etc/ssh/keys-root/authorized_keys' < /OpenStack_Platform/conversion_host_key/id_rsa.pub
 ----
 
-. For Red Hat Virtualization, connect to the VMware hypervisor using `ssh-agent` to validate the SSH connection:
+* OpenStack Platform:
++
+[options="nowrap" subs="verbatim"]
+----
+# ssh root@_esx1.example.com_ sh -c \
+    'cat >> /etc/ssh/keys-root/authorized_keys' < /OpenStack_Platform/conversion_host_key/id_rsa.pub
+----
+
+. Connect to the VMware hypervisor to validate the SSH connection:
+
+* Red Hat Virtualization:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -212,9 +223,9 @@ echo Agent pid 12345;
 # sudo -u vdsm \
     SSH_AUTH_SOCK=/tmp/ssh-123456ABCDE/agent.12345 ssh root@_esx1.example.com_
 ----
-+
-For OpenStack Platform, connect to the VM hypervisor as `cloud-user` to validate the SSH connection.
 
+* OpenStack Platform: Connect to the VM hypervisor as `root`.
++
 If the connection is successful, the conversion host is correctly configured for SSH transformation.
 
 [IMPORTANT]
