--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,42 +1,39 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization or to Red Hat OpenStack Platform.
+The Red Hat Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 (and later) to the following target environments:
 
-link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+* Red Hat Virtualization 4.2
++
+Red Hat Virtualization (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization documentation].)
 
-link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] provides the foundation to build a private or public Infrastructure-as-a-Service (IaaS) cloud on top of Red Hat Enterprise Linux. It offers a massively scalable, fault-tolerant platform for the development of cloud-enabled workloads.
+* Red Hat OpenStack Platform 13
++
+OpenStack Platform enables you to create a scaleable, fault-tolerant, private or public cloud based on Red Hat Enterprise Linux. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform documentation].)
+Note
 
-link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] provides the user interface required to manage challenging enterprise environments.
+The migration process is performed with CloudForms 4.7, a user interface for managing the infrastructure. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/[Red Hat CloudForms documentation].)
 
-[NOTE]
-====
-Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
-====
+The infrastructure migration has the following key steps:
 
 .Migration phases
 
 The Infrastructure Migration Solution has 4 key phases:
 
-. xref:Planning_the_migration[Planning]:
+. xref:Planning_the_migration[Planning the migration]
 +
-* Assessing the source and target environments to ensure sufficient resources for migration
-* Formulating strategies to minimize the impact on users
+* xref:Planning_questions[Questions designed to assess the resources and time required for your migration]
+* xref:Best_practices_for_migration[Recommendations to minimize the impact on your users]
 
-. xref:Preparing_the_migration_environment[Preparation]:
+. xref:Preparing_the_migration_environment[Preparing the environment for migration]
 +
-* Configuring the source and target environments
-* Creating and configuring the conversion hosts
+* xref:Preparing_the_vmware_source_environment[Preparing the source network and checking the virtual machines for anything that could hinder the migration process]
+* xref:Preparing_the_target_environment[Configuring the target storage and networks, installing software, and adding the providers to CloudForms]
 
-. xref:Migrating_the_infrastructure[Migration]:
+. xref:Migrating_the_infrastructure[Migration]
 +
-* Mapping the resources of the source environment to the target environment
-* Creating and running a migration plan
-
-. xref:Validating_a_migration_plan[Validation]:
-+
-* Checking that the migration plan completed successfully
-* xref:Troubleshooting[Troubleshooting], if necessary
+* xref:Creating_an_Infrastructure_Mapping[Mapping the source and target infrastructures]
+* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]. For a detailed description of the migration process, see xref:Vmware_to_rhv_workflow[] or xref:Vmware_to_osp_workflow[].
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
