--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -10,5 +10,8 @@ Preparing the environment for migration involves the following key steps:
 include::modules/ref_Software_compatibility_matrix.adoc[leveloffset=+1]
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
+
+[id="Preparing_the_target_environment"]
+== Preparing the target environment
 include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
 include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
