--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
@@ -1,5 +1,5 @@
 [id="Best_practices_for_migration"]
-= Best practices for migration
+= Recommendations for migration
 
 * Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
 
