--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -1,22 +1,23 @@
 [id="Vmware_to_rhv_workflow"]
-= VMware to Red Hat Virtualization workflow
+= Red Hat Virtualization migration workflow
 
-This workflow describes the process of migrating  from VMware to Red Hat Virtualization.
+This diagram describes the workflow of a migration to Red Hat Virtualization.
 
+.VMware to Red Hat Virtualization migration workflow
 image:vmware_to_rhv_migration_workflow.png[]
 
-. After creating an infrastructure mapping and a migration plan, you run the migration plan.
+image:1.png[height=25] You run a xref:Running_a_migration_plan[migration plan] in CloudForms.
 
-. CloudForms uses the migration plan to locate the virtual machines to be migrated.
+image:2.png[height=25] CloudForms uses the migration plan to locate the source virtual machines.
 
-. If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
+image:3.png[height=25] If you are using the VMware Virtual Disk Development Kit (VDDK) xref:datapath_transformation_options_vddk_ssh[transformation option], CloudForms captures the ESXi host fingerprint for authentication during the virtual machine conversion process.
 
-. Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
+image:4.png[height=25] Using the attributes defined for the RHV environment, CloudForms initiates communication with the conversion hosts. (A conversion host is a RHV host running virt-v2v and virt-v2v-wrapper.)
 
-. The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain with `virt-v2v`, and converts the disks.
+image:5.png[height=25] `virt-v2v-wrapper` connects to the source datastore through the ESXi host. `virt-v2v streams` the source disks to the target data domain and converts the source disks.
 
-. The target virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
+image:6.png[height=25] `virt-v2v-wrapper` creates a target RHV virtual machine, using the source virtual machine’s metadata in order to maintain its attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
 
-. The converted disks are attached to the target virtual machine. The target virtual machine's power state is identical to its pre-migration state.
-+
+image:7.png[height=25] `virt-v2v` attaches the converted disks to the RHV virtual machine. (The RHV virtual machine’s power state is identical to the source virtual machine’s premigration state.)
+
 The migration process is complete and the migration plan's status is displayed in CloudForms.
