--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ansible_conversion_hosts_inventory_file_example.adoc
@@ -25,7 +25,7 @@ all:
     manageiq_zone_id: "_42000000000001_"
     manageiq_providers:
       - name: "_RHV_"
-        hostname: "_rhvm.example.com_"
+        hostname: "_RHVM.example.com_"
         connection_configurations:
           - endpoint:
               role: "default"
@@ -35,7 +35,7 @@ all:
                 MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQQKDBJWMlYu
                 -----END CERTIFICATE-----
       - name: "_OpenStack_"
-        hostname: "_openstack.example.com_"
+        hostname: "_OpenStack_controller.example.com_"
         connection_configurations:
           - endpoint:
               role: "default"
